Fix for specific characters in get params